Do not access empty list (when maxEntries == 0)

BUG: 190844

svn path=/trunk/KDE/kdelibs/; revision=976157